// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Upload Page > select file page matches Snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            data-testid="breadcrumb---Home"
            id="breadcrumb---Home"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Home
            </a>
            <svg
              aria-hidden="true"
              class="ons-icon"
              fill="currentColor"
              focusable="false"
              role="img"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-no"
        id="main-content"
      >
        <form
          action="#"
          id="formID"
        >
          <h1
            class="ons-u-mb-l"
          >
            Deploy a questionnaire file
          </h1>
          <p>
            Upload and deploy a new Blaise package. You can also
             
            <a
              data-discover="true"
              href="/reinstall"
            >
              reinstall a previously uploaded questionnaire
            </a>
            .
          </p>
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_0_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                When a questionnaire file is selected and you continue to deploy this questionnaire file,
                 
                <b>
                  this may take a few minutes
                </b>
                .
                <br />
                <br />
                Given this, 
                <b>
                  do not navigate away
                </b>
                 from this page during this process. You will be re-directed when there is an update regarding the deploy of the questionnaire.
              </p>
            </div>
          </div>
          <div
            class="ons-field ons-u-mb-m"
          >
            <div
              class="ons-grid"
            >
              <div
                class="ons-grid__col ons-col-8@m ons-col-6@l"
              >
                <label
                  class="ons-label ons-label--with-description"
                  for="survey-selector"
                >
                  Select survey package
                </label>
                <span
                  class="ons-label__description ons-input--with-description"
                  id="survey-selector-description-hint"
                >
                  File type accepted is .bpkg
                </span>
                <input
                  accept=".bpkg"
                  aria-describedby="survey-selector-description-hint"
                  class="ons-input ons-input--text ons-input-type__input ons-input--upload"
                  data-testid="survey-selector-input"
                  id="survey-selector"
                  name="Select survey package"
                  props="[object Object]"
                  type="file"
                  value=""
                />
              </div>
            </div>
          </div>
          <div
            class="ons-btn-group ons-u-mt-m"
          >
            <button
              class="ons-btn"
              data-testid="continue-deploy-button-button"
              id="continue-deploy-button"
              type="submit"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Continue
                </span>
              </span>
            </button>
            <button
              class="ons-btn ons-btn--secondary"
              data-testid="cancel-deploy-button-button"
              id="cancel-deploy-button"
              type="button"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Cancel
                </span>
              </span>
            </button>
          </div>
        </form>
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumbs"
      class="ons-breadcrumbs"
    >
      <ol
        class="ons-breadcrumbs__items ons-u-fs-s"
      >
        <li
          class="ons-breadcrumbs__item"
          data-testid="breadcrumb---Home"
          id="breadcrumb---Home"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ons-icon"
            fill="currentColor"
            focusable="false"
            role="img"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="ons-page__main ons-u-mt-no"
      id="main-content"
    >
      <form
        action="#"
        id="formID"
      >
        <h1
          class="ons-u-mb-l"
        >
          Deploy a questionnaire file
        </h1>
        <p>
          Upload and deploy a new Blaise package. You can also
           
          <a
            data-discover="true"
            href="/reinstall"
          >
            reinstall a previously uploaded questionnaire
          </a>
          .
        </p>
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_0_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              When a questionnaire file is selected and you continue to deploy this questionnaire file,
               
              <b>
                this may take a few minutes
              </b>
              .
              <br />
              <br />
              Given this, 
              <b>
                do not navigate away
              </b>
               from this page during this process. You will be re-directed when there is an update regarding the deploy of the questionnaire.
            </p>
          </div>
        </div>
        <div
          class="ons-field ons-u-mb-m"
        >
          <div
            class="ons-grid"
          >
            <div
              class="ons-grid__col ons-col-8@m ons-col-6@l"
            >
              <label
                class="ons-label ons-label--with-description"
                for="survey-selector"
              >
                Select survey package
              </label>
              <span
                class="ons-label__description ons-input--with-description"
                id="survey-selector-description-hint"
              >
                File type accepted is .bpkg
              </span>
              <input
                accept=".bpkg"
                aria-describedby="survey-selector-description-hint"
                class="ons-input ons-input--text ons-input-type__input ons-input--upload"
                data-testid="survey-selector-input"
                id="survey-selector"
                name="Select survey package"
                props="[object Object]"
                type="file"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="ons-btn-group ons-u-mt-m"
        >
          <button
            class="ons-btn"
            data-testid="continue-deploy-button-button"
            id="continue-deploy-button"
            type="submit"
          >
            <span
              class="ons-btn__inner"
            >
              <span
                class="ons-btn__text"
              >
                Continue
              </span>
            </span>
          </button>
          <button
            class="ons-btn ons-btn--secondary"
            data-testid="cancel-deploy-button-button"
            id="cancel-deploy-button"
            type="button"
          >
            <span
              class="ons-btn__inner"
            >
              <span
                class="ons-btn__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </form>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Upload Page > select file page matches Snapshot 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <nav
        aria-label="Breadcrumbs"
        class="ons-breadcrumbs"
      >
        <ol
          class="ons-breadcrumbs__items ons-u-fs-s"
        >
          <li
            class="ons-breadcrumbs__item"
            data-testid="breadcrumb---Home"
            id="breadcrumb---Home"
          >
            <a
              class="ons-breadcrumbs__link"
              data-discover="true"
              href="/"
            >
              Home
            </a>
            <svg
              aria-hidden="true"
              class="ons-icon"
              fill="currentColor"
              focusable="false"
              role="img"
              viewBox="0 0 8 13"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                transform="translate(-5.02 -1.59)"
              />
            </svg>
          </li>
        </ol>
      </nav>
      <main
        class="ons-page__main ons-u-mt-no"
        id="main-content"
      >
        <form
          action="#"
          id="formID"
        >
          <h1
            class="ons-u-mb-l"
          >
            Deploy a questionnaire file
          </h1>
          <p>
            Upload and deploy a new Blaise package. You can also
             
            <a
              data-discover="true"
              href="/reinstall"
            >
              reinstall a previously uploaded questionnaire
            </a>
            .
          </p>
          <div
            class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
            id="panel-_r_0_"
          >
            <span
              class="ons-panel__assistive-text ons-u-vh"
            >
              Important information:
               
            </span>
            <div
              class="ons-panel__body "
            >
              <p>
                When a questionnaire file is selected and you continue to deploy this questionnaire file,
                 
                <b>
                  this may take a few minutes
                </b>
                .
                <br />
                <br />
                Given this, 
                <b>
                  do not navigate away
                </b>
                 from this page during this process. You will be re-directed when there is an update regarding the deploy of the questionnaire.
              </p>
            </div>
          </div>
          <div
            class="ons-grid"
          >
            <div
              class="ons-grid__col ons-col-8@m ons-col-6@l"
            >
              <label
                class="ons-label ons-label--with-description"
                for="survey-selector"
              >
                Select survey package
              </label>
              <span
                class="ons-label__description ons-input--with-description"
                id="survey-selector-description-hint"
              >
                File type accepted is .bpkg
              </span>
              <input
                accept=".bpkg"
                aria-describedby="survey-selector-description-hint"
                aria-invalid="false"
                class="ons-input ons-input--text ons-input-type__input ons-input--upload"
                data-testid="survey-selector-input"
                id="survey-selector"
                name="Select survey package"
                type="file"
              />
            </div>
          </div>
          <div
            class="ons-btn-group ons-u-mt-m"
          >
            <button
              class="ons-btn"
              data-testid="continue-deploy-button-button"
              id="continue-deploy-button"
              type="submit"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Continue
                </span>
              </span>
            </button>
            <button
              class="ons-btn ons-btn--secondary"
              data-testid="cancel-deploy-button-button"
              id="cancel-deploy-button"
              type="button"
            >
              <span
                class="ons-btn__inner"
              >
                <span
                  class="ons-btn__text"
                >
                  Cancel
                </span>
              </span>
            </button>
          </div>
        </form>
      </main>
    </div>
  </body>,
  "container": <div>
    <nav
      aria-label="Breadcrumbs"
      class="ons-breadcrumbs"
    >
      <ol
        class="ons-breadcrumbs__items ons-u-fs-s"
      >
        <li
          class="ons-breadcrumbs__item"
          data-testid="breadcrumb---Home"
          id="breadcrumb---Home"
        >
          <a
            class="ons-breadcrumbs__link"
            data-discover="true"
            href="/"
          >
            Home
          </a>
          <svg
            aria-hidden="true"
            class="ons-icon"
            fill="currentColor"
            focusable="false"
            role="img"
            viewBox="0 0 8 13"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
              transform="translate(-5.02 -1.59)"
            />
          </svg>
        </li>
      </ol>
    </nav>
    <main
      class="ons-page__main ons-u-mt-no"
      id="main-content"
    >
      <form
        action="#"
        id="formID"
      >
        <h1
          class="ons-u-mb-l"
        >
          Deploy a questionnaire file
        </h1>
        <p>
          Upload and deploy a new Blaise package. You can also
           
          <a
            data-discover="true"
            href="/reinstall"
          >
            reinstall a previously uploaded questionnaire
          </a>
          .
        </p>
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-u-mt-m"
          id="panel-_r_0_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <p>
              When a questionnaire file is selected and you continue to deploy this questionnaire file,
               
              <b>
                this may take a few minutes
              </b>
              .
              <br />
              <br />
              Given this, 
              <b>
                do not navigate away
              </b>
               from this page during this process. You will be re-directed when there is an update regarding the deploy of the questionnaire.
            </p>
          </div>
        </div>
        <div
          class="ons-grid"
        >
          <div
            class="ons-grid__col ons-col-8@m ons-col-6@l"
          >
            <label
              class="ons-label ons-label--with-description"
              for="survey-selector"
            >
              Select survey package
            </label>
            <span
              class="ons-label__description ons-input--with-description"
              id="survey-selector-description-hint"
            >
              File type accepted is .bpkg
            </span>
            <input
              accept=".bpkg"
              aria-describedby="survey-selector-description-hint"
              aria-invalid="false"
              class="ons-input ons-input--text ons-input-type__input ons-input--upload"
              data-testid="survey-selector-input"
              id="survey-selector"
              name="Select survey package"
              type="file"
            />
          </div>
        </div>
        <div
          class="ons-btn-group ons-u-mt-m"
        >
          <button
            class="ons-btn"
            data-testid="continue-deploy-button-button"
            id="continue-deploy-button"
            type="submit"
          >
            <span
              class="ons-btn__inner"
            >
              <span
                class="ons-btn__text"
              >
                Continue
              </span>
            </span>
          </button>
          <button
            class="ons-btn ons-btn--secondary"
            data-testid="cancel-deploy-button-button"
            id="cancel-deploy-button"
            type="button"
          >
            <span
              class="ons-btn__inner"
            >
              <span
                class="ons-btn__text"
              >
                Cancel
              </span>
            </span>
          </button>
        </div>
      </form>
    </main>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
